# model-quantisation-fine-tuning

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md
examples/: 01_lora_from_scratch.py  02_quantize_linear.py  03_advisor_and_vram.py  04_serve_on_nvidia_nim.py  05_grounded_generation.py  06_self_consistency.py
src/quantune/: __init__.py  advisor.py  cli.py  deploy.py  lora.py  quantization.py  serving.py  vram.py
tests/: test_advisor.py  test_deploy.py  test_lora.py  test_quantization.py  test_serving.py  test_vram.py
